--- a/climate_action_data.ipynb
+++ b/climate_action_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "f89d9093",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
       "       Sensor_ID        Date Soil_Moisture(%) Soil_pH Temperature(C)  \\\n",
       "count        913         909              913     913            913   \n",
       "unique       800         798              750     313            170   \n",
-      "top     SEN-1430  2026-09-10            error    7.54           19.1   \n",
+      "top     SEN-1779  2026-01-02            error    7.54           19.1   \n",
       "freq           2           2                5      11             13   \n",
       "\n",
       "       Humidity(%) Crop_Type Fertilizer_Recommended(kg/ha)  \\\n",
@@ -68,7 +68,7 @@
       "       Irrigation_Recommended(mm) Drone_Image_ID  \n",
       "count                         913            913  \n",
       "unique                        243            800  \n",
-      "top                           8.0       IMG-2430  \n",
+      "top                           8.0       IMG-2779  \n",
       "freq                           11              2  \n"
      ]
     }
@@ -460,7 +460,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -474,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
