added notes from lecture

--- a/afternoonclassML.ipynb
+++ b/afternoonclassML.ipynb
@@ -22,7 +22,11 @@
     "#-ANOVA F-test\n",
     "\n",
     "#2.Wrapper methods-also referred to as greedy algorithms-use combination of features to build a model and evaluate its performance based on a specific metric\n",
-    "#3.Embedded methods"
+    "#3.Embedded methods\n",
+    "\n",
+    "\n",
+    "#Choosing the right feature selection method\n",
+    "#1.\n"
    ]
   }
  ],
