added 2 jupyter files

--- a/linearRegression.ipynb
+++ b/linearRegression.ipynb
@@ -1055,6 +1055,17 @@
     "plt.ylabel('Count')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5e9abcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Average domestic revenue by MPAA rating\n",
+    "df.groupby('MPAA')['domestic_revenue'].mean().plot(kind='bar')"
+   ]
   }
  ],
  "metadata": {
