--- a/unsupervised_learning.ipynb
+++ b/unsupervised_learning.ipynb
@@ -16,6 +16,17 @@
     "import pandas as pd\n",
     "from sklearn.cluster import KMeans"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e25c336e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load a dataset or create a dataset\n",
+    "data={}"
+   ]
   }
  ],
  "metadata": {
