Added heat map and started model training(incomplete)

--- a/Box_Office_Revenue_Prediction_Using_Linear_Regression_in_ML.ipynb
+++ b/Box_Office_Revenue_Prediction_Using_Linear_Regression_in_ML.ipynb
@@ -1148,7 +1148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1174,7 +1174,20 @@
         "sb.heatmap(df.select_dtypes(include=np.number).corr() > 0.8,\n",
         "            annot=True,\n",
         "            cbar=False)\n",
-        "plt.show()"
+        "plt.show()\n",
+        "#Strong correlation:0.8-1.0\n",
+        "#moderate correlation:0.5-0.8\n",
+        "#weak correlation:0.3-0.5   "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Preparing data for model training\n",
+        "#1.Split the data into train and test sets\n"
       ]
     }
   ],
